--- a/pictures.html
+++ b/pictures.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Pictures</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Contact Our Business</h1>
+        <h1>Pictures</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,13 +19,17 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h2>Get in Touch</h2>
-        <p>We'd love to hear from you. Reach out to us through any of the methods below.</p>
-    </main>
+    <section id="pictures">
+        <h2>Gallery</h2>
+        <div class="gallery">
+            <img src="path/to/your/image1.jpg" alt="Image 1 description">
+            <img src="path/to/your/image2.jpg" alt="Image 2 description">
+            <img src="path/to/your/image3.jpg" alt="Image 3 description">
+            <!-- Add more images as needed -->
+        </div>
+    </section>
     <footer>
-        <p>© 2024 Our Business</p>
+        <p>&copy; 2024 Financial Tracker. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
