--- a/index.html
+++ b/index.html
@@ -3,27 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Home</title>
+    <title>Financial Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Business</h1>
+        <h1>Financial Tracker</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="pictures.html">Pictures</a></li>
+                <li><a href="calendar.html">Calendar</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h2>Our Services</h2>
-        <p>We offer a variety of services to help your business grow.</p>
-    </main>
+    <section id="financial-tracker">
+        <h2>Financial Tracker</h2>
+        <div class="button-container">
+            <button onclick="addRow()">Add Row</button>
+            <button onclick="removeRow()">Remove Row</button>
+        </div>
+        <table id="financialTable">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Description</th>
+                    <th>Income</th>
+                    <th>Expense</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input type="date"></td>
+                    <td><input type="text"></td>
+                    <td><input type="number" oninput="calculateTotals()"></td>
+                    <td><input type="number" oninput="calculateTotals()"></td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="button-container">
+            <p id="total"></p>
+        </div>
+    </section>
     <footer>
-        <p>© 2024 Our Business</p>
+        <p>&copy; 2024 Financial Tracker. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
